--- a/Css/Style.css
+++ b/Css/Style.css
@@ -59,6 +59,10 @@ body
     padding: 5px 15px 15px 15px;
     box-sizing: border-box;
     overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    align-items: flex-end;
 }
 
 .Logo
@@ -93,6 +97,7 @@ body
     -webkit-text-fill-color: transparent;
     padding: 0px;
     margin: 0px;
+    width: fit-content;
 }
 
 .Text
